# bitcask

./: .gitignore  CMakeLists.txt  LICENSE  README.md  db.go  db_file.go  db_test.go  entry.go  errors.go  go.mod
cmake/: FindAbseil.cmake  FindCrc32c.cmake  FindSpdlog.cmake
include/: bitcask.hpp
src/: CMakeLists.txt
src/bitcask/common/: entry.h  error.h  type.h
src/bitcask/db/: db.h
src/bitcask/fs/: file.cc  file.h  file_factory.h  reader.h  writer.h
src/bitcask/worker/: worker.h
src/utils/: log.hpp
tests/: CMakeLists.txt  test_fs.cc
